TestCases/Errors/threaded_movement/observations/aut_04_obs.spm
"obs" "15-5" "0"
"obs" "16-5" "0.000184902982918376"
"obs" "17-5" "0.000378068465086805"
"obs" "18-5" "0"
"obs" "15-6" "5.14244574719737e-05"
"obs" "16-6" "0.000223381023556561"
"obs" "17-6" "0.000248654637274691"
"obs" "18-6" "0.000299450161438847"
"obs" "19-6" "4.57205559619605e-05"
"obs" "20-6" "0"
"obs" "15-7" "0"
"obs" "16-7" "0.000373887768842078"
"obs" "17-7" "0.000381911349370122"
"obs" "20-7" "0"
"obs" "15-8" "0.000754716981132075"
"obs" "18-12" "0"
"obs" "19-12" "0"
"obs" "20-12" "0"
"obs" "19-13" "0"
"obs" "8-14" "0.0114705882352941"
"obs" "9-14" "0.0140196078431373"
"obs" "9-17" "0.0123195631528965"
"obs" "13-17" "0.0479086538461539"
"obs" "12-18" "0.0258333333333333"
"obs" "13-18" "0.038125"
"obs" "5-19" "0"
"obs" "10-19" "0.0586920024420024"
"obs" "11-19" "0.0331551973100025"
"obs" "12-19" "0.0381017740429505"
"obs" "8-20" "0.00101010101010101"
"obs" "9-20" "0.000880010445227837"
"obs" "10-20" "0.0166025641025641"
"obs" "11-20" "0.0193247863247863"
"obs" "2-21" "0"
"obs" "5-21" "0.00107962213225371"
"obs" "9-21" "0"
"obs" "3-22" "0"
"obs" "9-22" "0"
"error_value" "15-5" "0"
"error_value" "16-5" "0"
"error_value" "17-5" "0"
"error_value" "18-5" "0"
"error_value" "15-6" "0"
"error_value" "16-6" "0"
"error_value" "17-6" "0"
"error_value" "18-6" "0"
"error_value" "19-6" "0"
"error_value" "20-6" "0"
"error_value" "15-7" "0"
"error_value" "16-7" "0"
"error_value" "17-7" "0"
"error_value" "20-7" "0"
"error_value" "15-8" "0"
"error_value" "18-12" "0"
"error_value" "19-12" "0"
"error_value" "20-12" "0"
"error_value" "19-13" "0"
"error_value" "8-14" "0"
"error_value" "9-14" "0"
"error_value" "9-17" "0"
"error_value" "13-17" "0"
"error_value" "12-18" "0"
"error_value" "13-18" "0"
"error_value" "5-19" "0"
"error_value" "10-19" "0"
"error_value" "11-19" "0"
"error_value" "12-19" "0"
"error_value" "8-20" "0"
"error_value" "9-20" "0"
"error_value" "10-20" "0"
"error_value" "11-20" "0"
"error_value" "2-21" "0"
"error_value" "5-21" "0"
"error_value" "9-21" "0"
"error_value" "3-22" "0"
"error_value" "9-22" "0"
